// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mask color is transparent 1`] = `
<div
  class="za-mask"
  style="background-color:transparent"
/>
`;

exports[`Mask renders correctly 1`] = `
<div
  class="za-mask"
  style="background-color:rgba(0, 0, 0, 0.55)"
/>
`;
